--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql:///exam
 jdbc.username = root
-jdbc.password = system
+jdbc.password = 123456
